--- a/views/keepers.jade
+++ b/views/keepers.jade
@@ -20,6 +20,11 @@ block inlineScripts
 			}
 		};
 		var saveChanges = function(name) {
+			if($('.player[minor_leaguer="true"]').find('input:checked').length > 10) {
+				alert("You cannot keep more than 10 minor leaguers. " + 
+					"Deselect one or click 'Keep as major leaguer' to keep the player for a starting salary of 3 units");
+				return;
+			}
 			var payload = { team: name, total : 0, keepers: [], nonkeepers: [] };
 			payload.total = parseInt($('#draftBudget').text().split(":")[1]);
 			var players = $('.player');
@@ -31,25 +36,24 @@ block inlineScripts
 					payload.nonkeepers.push(pid);
 				}
 			}
-			$.post("/gm/keeper", payload, function(result) {
-				if(result == "worked") {
-					alert('Your preferences have been saved');
-				}
-			});
+			$.post("/gm/keeper", payload);
 		};
 
 
 
 
 block content
-	h1= team.fullName
+	section(id="top")
+		h1= team.fullName
 
-	h3#draftBudget
-		='2014 Draft Budget: ' + cash.value
-		
-	h3#saveButton
-		-if(isTeamOwner)
-			input.saveChanges(type="button" value="Save Selections" onclick="saveChanges('" + team.team + "')")
+		h3#draftBudget
+			='2014 Draft Budget: ' + cash.value
+			
+		h3#saveButton
+			-if(isTeamOwner)
+				input.saveChanges(type="button" value="Save Selections" onclick="saveChanges('" + team.team + "')")
+
+		p= message
 
 	mixin player(player, position, properties)
 		-if(player != undefined)
@@ -83,7 +87,7 @@ block content
 						checked=player.history[player.history_index].locked_up || player.history[player.history_index].minor_leaguer || 
 							(player.history[player.history_index-1].keeper_team != undefined &&
 								player.history[player.history_index-1].keeper_team != '')
-						disabled=player.history[player.history_index].locked_up || player.history[player.history_index].minor_leaguer
+						disabled=player.history[player.history_index].locked_up
 						onclick="changeTotal(this)"
 						value=nextYearSalary
 						)
@@ -93,42 +97,43 @@ block content
 				td -
 				td
 
-	table(id='players_' + team.team)
-		thead
-			th Position
-			th Name
-			th= "Salary " + year
-			-var nextYear = parseInt(year) + 1;
-			th= "Salary " + nextYear
-			th= "Contract Year " + year
-			th Select
-		tbody
-			mixin player(players.catchers[0], 'C')
-			mixin player(players.catchers[1], 'C')
-			mixin player(players.first_base, '1B')
-			mixin player(players.second_base, '2B')
-			mixin player(players.third_base, '3B')
-			mixin player(players.shortstop, 'SS')
-			mixin player(players.middle_infield, '2B/SS')
-			mixin player(players.corner_infield, '1B/3B')
-			mixin player(players.outfielders[0], 'OF')
-			mixin player(players.outfielders[1], 'OF')
-			mixin player(players.outfielders[2], 'OF')
-			mixin player(players.outfielders[3], 'OF')
-			mixin player(players.outfielders[4], 'OF')
-			mixin player(players.utility, 'U')
-			mixin player(players.pitchers[0], 'P')
-			mixin player(players.pitchers[1], 'P')
-			mixin player(players.pitchers[2], 'P')
-			mixin player(players.pitchers[3], 'P')
-			mixin player(players.pitchers[4], 'P')
-			mixin player(players.pitchers[5], 'P')
-			mixin player(players.pitchers[6], 'P')
-			mixin player(players.pitchers[7], 'P')
-			mixin player(players.pitchers[8], 'P')
-			-if(players.dl != undefined)
-				-for(var i = 0; i < players.dl.length; i++)
-					mixin player(players.dl[i], 'DL')
-			-if(players.minor_leaguers != undefined)
-				-for(var i = 0; i < players.minor_leaguers.length; i++)
-					mixin player(players.minor_leaguers[i], 'ML')
+	section(id="left", style="width:900px")
+		table(id='players_' + team.team)
+			thead
+				th Position
+				th Name
+				th= "Salary " + year
+				-var nextYear = parseInt(year) + 1;
+				th= "Salary " + nextYear
+				th= "Contract Year " + year
+				th Select
+			tbody
+				mixin player(players.catchers[0], 'C')
+				mixin player(players.catchers[1], 'C')
+				mixin player(players.first_base, '1B')
+				mixin player(players.second_base, '2B')
+				mixin player(players.third_base, '3B')
+				mixin player(players.shortstop, 'SS')
+				mixin player(players.middle_infield, '2B/SS')
+				mixin player(players.corner_infield, '1B/3B')
+				mixin player(players.outfielders[0], 'OF')
+				mixin player(players.outfielders[1], 'OF')
+				mixin player(players.outfielders[2], 'OF')
+				mixin player(players.outfielders[3], 'OF')
+				mixin player(players.outfielders[4], 'OF')
+				mixin player(players.utility, 'U')
+				mixin player(players.pitchers[0], 'P')
+				mixin player(players.pitchers[1], 'P')
+				mixin player(players.pitchers[2], 'P')
+				mixin player(players.pitchers[3], 'P')
+				mixin player(players.pitchers[4], 'P')
+				mixin player(players.pitchers[5], 'P')
+				mixin player(players.pitchers[6], 'P')
+				mixin player(players.pitchers[7], 'P')
+				mixin player(players.pitchers[8], 'P')
+				-if(players.dl != undefined)
+					-for(var i = 0; i < players.dl.length; i++)
+						mixin player(players.dl[i], 'DL')
+				-if(players.minor_leaguers != undefined)
+					-for(var i = 0; i < players.minor_leaguers.length; i++)
+						mixin player(players.minor_leaguers[i], 'ML')
