--- a/views/historicalTeam.jade
+++ b/views/historicalTeam.jade
@@ -60,4 +60,4 @@ block content
 					mixin player(players.dl[i], 'DL')
 			-if(players.minor_leaguers != undefined)
 				-for(var i = 0; i < players.minor_leaguers.length; i++)
-					mixin player(players.minor_leaguers[i], 'ML')
+					mixin player(players.minor_leaguers[i], 'MIN')
