--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,6 +25,8 @@ html
 							li
 								a(href="/team/"+user.team) My Team
 							li
+								a(href="/profile") Profile
+							li
 								a(href="/logout") Logout
 						-if(user != null && user.role == 'admin') 
 							li
