--- a/views/trade.jade
+++ b/views/trade.jade
@@ -147,7 +147,7 @@ block content
 						mixin player(players.dl[i], 'DL')
 				-if(players.minor_leaguers != undefined)
 					-for(var i = 0; i < players.minor_leaguers.length; i++)
-						mixin player(players.minor_leaguers[i], 'ML')
+						mixin player(players.minor_leaguers[i], 'MIN')
 
 	div
 		input(type="submit" onclick="submitTrade()" value="Submit Trade")
