--- a/views/draft.jade
+++ b/views/draft.jade
@@ -90,7 +90,7 @@ block content
 	=	"pick.year='" + current_pick.year + "';"
 	| </script>
 
-	section(id="left")
+	section(id="left" style="width:800px")
 		table
 			thead
 				th
