--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
 	head
 		title= title
 		link(rel='stylesheet', href='/public/css/master.css')
+		link(rel='icon' href='/public/homerFavicon.ico')
 		link(href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css')
 
 		block scripts
@@ -10,6 +11,7 @@ html
 			script(type='text/javascript', src='http://code.highcharts.com/highcharts.js')
 			script(type='text/javascript', src='http://code.jquery.com/ui/1.10.3/jquery-ui.js')
 			script(type='text/javascript', src="/public/jquery.tablesorter.js")
+			script(type='text/javascript', src="http://momentjs.com/downloads/moment.min.js")
 
 	body
 		div(id="wrapper")
