--- a/public/css/master.css
+++ b/public/css/master.css
@@ -108,11 +108,11 @@ td, th {
 	font-size: 15px;
 }
 
-li.warning p{
+li.notification p{
 	display: inline;
 	cursor: auto;
 }
-li.warning p:nth-child(2) {
+li.notification p:nth-child(2) {
 	cursor: pointer;
 	padding-left:20px;
 }
