--- a/views/team.jade
+++ b/views/team.jade
@@ -30,7 +30,9 @@ block content
 		-if(player != undefined)
 			tr(player_id=player.player_id json=JSON.stringify(player))
 				td
-					-if(player.history[player.history_index].minor_leaguer && player.fantasy_position == 'Bench')
+					-var isMinorLeaguer = player.history[player.history_index].minor_leaguer;
+					-isMinorLeaguer = isMinorLeaguer && (!player.fantasy_position || player.fantasy_position == 'Bench');
+					-if(isMinorLeaguer)
 						| Minors 
 					-else
 						-if(player.history_index == 0)
@@ -92,7 +94,7 @@ block content
 							-else
 								td
 									a(href="/team/" + v.history[0].fantasy_team)= v.history[0].fantasy_team
-							td= v.vulture.deadline
+							td= moment(v.vulture.deadline).format('MMM Do YYYY, h:mm:ss a [EST]')
 							-if(isInbound && user && user.team == team.team)
 								td
 									a(href="/gm/vulture/fix/" + v.player_id) Click to Fix
